feature 3, sorting by most commented

--- a/client/v2/index.html
+++ b/client/v2/index.html
@@ -21,10 +21,6 @@
       </div>
       <div id="filters">
         <label>
-          <input type="checkbox" id="filter-commented" />
-          By most commented
-        </label>
-        <label>
           <input type="checkbox" id="filter-hot" />
           By hot deals
         </label>
@@ -38,6 +34,7 @@
           <option value="date-asc">Recently published</option>
           <option value="date-desc">Anciently published</option>
           <option value="discount-desc">Best discount</option>
+          <option value="comments-desc">Most commented</option>
         </select>
       </div>
     </section>
