--- a/client/v2/index.html
+++ b/client/v2/index.html
@@ -85,5 +85,9 @@
     <section id="deals"></section>
     <script type="text/javascript" charset="UTF-8" src="utils.js"></script>
     <script type="text/javascript" charset="UTF-8" src="portfolio.js"></script>
+    <section id="sales">
+      <h2>Sales on Vinted</h2>
+    </section>
+    
   </body>
 </html>
