--- a/client/v2/index.html
+++ b/client/v2/index.html
@@ -67,16 +67,16 @@
       </div>
       <div>
         <span>p5 sales price value</span>
-        <span>0</span>
+        <span id="p5Price">0</span>
       </div>
       <div>
         <span>p25 sales price value</span>
-        <span>0</span>
+        <span id="p25Price">0</span>
       </div>
       <div>
         <span>p50 sales price value</span>
-        <span>0</span>
-      </div>
+        <span id="p50Price">0</span>
+      </div>      
       <div>
         <span>Lifetime value</span>
         <span>10 days</span>
