--- a/client/v2/index.html
+++ b/client/v2/index.html
@@ -79,8 +79,9 @@
       </div>      
       <div>
         <span>Lifetime value</span>
-        <span>10 days</span>
+        <span id="lifetimeValue">0 days</span>
       </div>
+           
     </section>
     <section id="deals"></section>
     <script type="text/javascript" charset="UTF-8" src="utils.js"></script>
