--- a/client/v2/index.html
+++ b/client/v2/index.html
@@ -30,6 +30,7 @@
           <option value="discount-desc">Best discount</option>
           <option value="comments-desc">Most commented</option>
           <option value="temperature-desc">Hot deals</option>
+          <option value="favorites">Favorites only</option>
         </select>
       </div>
       <div id="thresholds">
