--- a/client/v2/index.html
+++ b/client/v2/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>🧱 Lego | Predictability of a lego set deal</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Lego</h1>
