--- a/client/v2/index.html
+++ b/client/v2/index.html
@@ -56,6 +56,12 @@
         <label>Lego set id:</label>
         <select id="lego-set-id-select"></select> 
       </div>
+      <div>
+        <label>Or enter Lego set id:</label>
+        <input type="text" id="lego-set-id-input" placeholder="e.g. 75292" />
+        <button id="search-sales-btn">Search Sales</button>
+      </div>
+      
     </section>
     <section id="indicators">
       <h2>Indicators</h2>
