--- a/client/v2/index.html
+++ b/client/v2/index.html
@@ -48,7 +48,7 @@
           <input type="number" id="min-temperature" value="100" min="0" />
         </div>
       </div>
-      
+      <input type="hidden" id="current-filter" value="" />
     </section>
     <section id="lego">
       <h2>Lego sets</h2>
